really fix alignment of question mark in help button

--- a/app/styles/app/modules/buttons.sass
+++ b/app/styles/app/modules/buttons.sass
@@ -137,7 +137,7 @@ $button-border-color: #d4d4d4
   position: relative
   top: .4em
   left: .5em
-  width: 1.3rem
+  width: 1.4rem
   height: 1.4rem
   background: $grey1
   border: none
@@ -146,5 +146,5 @@ $button-border-color: #d4d4d4
   .icon--question
     @extend %absolute-center
     width: 0.6em
-    transform: translateX(0.1em);
+    height: 0.9em
 
